--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-123456
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Lee</title>
+</head>
+<body>
+	<h1>hello ljs</h1>
+	<p>this is leejongsuk...</p>
+</body>
+</html>
